k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubernetes.io/limit-ranger: 'LimitRanger plugin set: cpu request for container
      peerjs-server'
  creationTimestamp: null
  generateName: peerjs-server-bc96fdc64-
  labels:
    pod-template-hash: bc96fdc64
    run: peerjs-server
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: peerjs-server-bc96fdc64
    uid: cc6544cf-109e-11eb-a0fc-42010af001a4
  selfLink: /api/v1/namespaces/default/pods/peerjs-server-bc96fdc64-wqc5c
spec:
  containers:
  - args:
    - --port
    - "9000"
    - --path
    - /myapp
    image: gcr.io/octo-news/peerjs-server
    imagePullPolicy: Always
    name: peerjs-server
    ports:
    - containerPort: 9000
      protocol: TCP
    resources:
      requests:
        cpu: 100m
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-mcnvt
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: gke-dask-cluster-default-pool-4092c065-wmly
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-mcnvt
    secret:
      defaultMode: 420
      secretName: default-token-mcnvt
status:
  phase: Pending
  qosClass: Burstable
