k8s/peerjs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: peerjs-server
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: http
  selector:
    app: peerjs-server
  sessionAffinity: ClientIP
  externalTrafficPolicy: Local 
status:
  loadBalancer: {}
