k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: peerjs-server
  labels:
    name: peerjs-server
spec:
  type: NodePort
  ports:
    - port: 9000
      nodePort: 30069
      name: http
  selector:
    name: peerjs-server
