k8s/peerjs-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: peerjs-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: peerjs-server-ip
    nginx.org/proxy-connect-timeout: "3600s"
    nginx.org/proxy-read-timeout: "3600s"
spec:
  backend:
    serviceName: peerjs-server
    servicePort: 9000
